--- a/ui/mydata/DriveInfo.ui
+++ b/ui/mydata/DriveInfo.ui
@@ -14,6 +14,18 @@
    <string>DriveInfo</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_4">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item row="0" column="1">
     <widget class="QLabel" name="name">
      <property name="text">
