--- a/ui/mydata/MyData.ui
+++ b/ui/mydata/MyData.ui
@@ -29,11 +29,7 @@
    <item row="1" column="0">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(82, 82, 83);
-border-top-color: rgb(159, 157, 160);
-border-left-color: rgb(159, 157, 160);
-border-right-color: rgb(83, 83, 84);
-border-bottom-color: rgb(83, 83, 84);</string>
+      <string notr="true"/>
      </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::StandardButton::Close</set>
@@ -41,8 +37,7 @@ border-bottom-color: rgb(83, 83, 84);</string>
     </widget>
    </item>
    <item row="0" column="0">
-    <widget class="QTabWidget" name="tabWidget">
-    </widget>
+    <widget class="QTabWidget" name="tabWidget"/>
    </item>
   </layout>
  </widget>
