--- a/ui/mydata/ImageViewer.ui
+++ b/ui/mydata/ImageViewer.ui
@@ -29,34 +29,6 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_Buttons">
      <item>
-      <widget class="QToolButton" name="toolButton_Adapt">
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="../../resources.qrc">
-         <normaloff>:/resources/svg/zoom-fit-svgrepo-com.svg</normaloff>
-         <normalon>:/resources/svg/zoom-fit-curve-svgrepo-com.svg</normalon>:/resources/svg/zoom-fit-svgrepo-com.svg</iconset>
-       </property>
-       <property name="checkable">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Orientation::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
       <widget class="QToolButton" name="toolButton_One2One">
        <property name="text">
         <string>1:1</string>
@@ -86,6 +58,33 @@
        <property name="icon">
         <iconset resource="../../resources.qrc">
          <normaloff>:/resources/svg/zoom-out-svgrepo-com.svg</normaloff>:/resources/svg/zoom-out-svgrepo-com.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QToolButton" name="toolButton_Close">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../resources.qrc">
+         <normaloff>:/resources/svg/OpenBridge/close-google.svg</normaloff>:/resources/svg/OpenBridge/close-google.svg</iconset>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
