--- a/resources.qrc
+++ b/resources.qrc
@@ -92,6 +92,11 @@
         <file>resources/svg/OpenBridge/file-import-google.svg</file>
         <file>resources/svg/OpenBridge/navigation-route.svg</file>
 
+        <file>resources/svg/case-sensitive-svgrepo-com.svg</file>
+        <file>resources/svg/gui-view-hide-svgrepo-com.svg</file>
+        <file>resources/svg/gui-view-show-svgrepo-com.svg</file>
+        <file>resources/svg/rename-svgrepo-com.svg</file>
+
         <file>resources/svg/aspect-ratio-svgrepo-com.svg</file>
         <file>resources/svg/zoom-fit-curve-svgrepo-com.svg</file>
         <file>resources/svg/zoom-fit-svgrepo-com.svg</file>
