Implemented xml and json viewer (as text file)

--- a/ui/mydata/TextViewer.ui
+++ b/ui/mydata/TextViewer.ui
@@ -96,11 +96,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QTextEdit" name="textEdit_Text">
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
+      <widget class="QTextBrowser" name="textBrowser_Text"/>
      </item>
     </layout>
    </item>
