--- a/ui/mydata/Files.ui
+++ b/ui/mydata/Files.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>997</width>
-    <height>416</height>
+    <width>1113</width>
+    <height>423</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,6 +53,12 @@
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/arrow-left-google.svg</normaloff>:/resources/svg/OpenBridge/arrow-left-google.svg</iconset>
         </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
        </widget>
       </item>
       <item>
@@ -64,6 +70,12 @@
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/arrow-up-google.svg</normaloff>:/resources/svg/OpenBridge/arrow-up-google.svg</iconset>
         </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
        </widget>
       </item>
       <item>
@@ -74,6 +86,12 @@
         <property name="icon">
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/home.svg</normaloff>:/resources/svg/OpenBridge/home.svg</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -91,19 +109,6 @@
        </widget>
       </item>
       <item>
-       <spacer name="horizontalSpacer_1">
-        <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
        <widget class="QToolButton" name="toolButton_Filters">
         <property name="text">
          <string>...</string>
@@ -111,6 +116,12 @@
         <property name="icon">
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/filter.svg</normaloff>:/resources/svg/OpenBridge/filter.svg</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -122,6 +133,12 @@
         <property name="icon">
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/case-sensitive-svgrepo-com.svg</normaloff>:/resources/svg/case-sensitive-svgrepo-com.svg</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -138,6 +155,12 @@
           <normaloff>:/resources/svg/gui-view-show-svgrepo-com.svg</normaloff>
           <normalon>:/resources/svg/gui-view-hide-svgrepo-com.svg</normalon>:/resources/svg/gui-view-show-svgrepo-com.svg</iconset>
         </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
         <property name="checkable">
          <bool>true</bool>
         </property>
@@ -147,6 +170,12 @@
        <widget class="QToolButton" name="toolButton_SearchSystem">
         <property name="text">
          <string>...</string>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -164,6 +193,12 @@
         <property name="icon">
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/search.svg</normaloff>:/resources/svg/OpenBridge/search.svg</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -189,6 +224,12 @@
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/content-cut-google.svg</normaloff>:/resources/svg/OpenBridge/content-cut-google.svg</iconset>
         </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
        </widget>
       </item>
       <item>
@@ -200,6 +241,12 @@
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/content-copy-google.svg</normaloff>:/resources/svg/OpenBridge/content-copy-google.svg</iconset>
         </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
        </widget>
       </item>
       <item>
@@ -210,6 +257,12 @@
         <property name="icon">
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/content-paste-google.svg</normaloff>:/resources/svg/OpenBridge/content-paste-google.svg</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -235,6 +288,12 @@
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/rename-svgrepo-com.svg</normaloff>:/resources/svg/rename-svgrepo-com.svg</iconset>
         </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
        </widget>
       </item>
       <item>
@@ -246,20 +305,13 @@
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/delete-google.svg</normaloff>:/resources/svg/OpenBridge/delete-google.svg</iconset>
         </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
+        <property name="iconSize">
          <size>
-          <width>40</width>
-          <height>20</height>
+          <width>32</width>
+          <height>32</height>
          </size>
         </property>
-       </spacer>
+       </widget>
       </item>
       <item>
        <widget class="QToolButton" name="toolButton_NewFolder">
@@ -270,12 +322,11 @@
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/widget-add-google.svg</normaloff>:/resources/svg/OpenBridge/widget-add-google.svg</iconset>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="toolButton_NewFile">
-        <property name="text">
-         <string>...</string>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
         </property>
        </widget>
       </item>
