--- a/ui/mydata/TextViewer.ui
+++ b/ui/mydata/TextViewer.ui
@@ -37,6 +37,12 @@
         <iconset resource="../../resources.qrc">
          <normaloff>:/resources/svg/aspect-ratio-svgrepo-com.svg</normaloff>:/resources/svg/aspect-ratio-svgrepo-com.svg</iconset>
        </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
       </widget>
      </item>
      <item>
@@ -48,6 +54,12 @@
         <iconset resource="../../resources.qrc">
          <normaloff>:/resources/svg/zoom-in-svgrepo-com.svg</normaloff>:/resources/svg/zoom-in-svgrepo-com.svg</iconset>
        </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
       </widget>
      </item>
      <item>
@@ -58,6 +70,12 @@
        <property name="icon">
         <iconset resource="../../resources.qrc">
          <normaloff>:/resources/svg/zoom-out-svgrepo-com.svg</normaloff>:/resources/svg/zoom-out-svgrepo-com.svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -85,6 +103,12 @@
        <property name="icon">
         <iconset resource="../../resources.qrc">
          <normaloff>:/resources/svg/OpenBridge/close-google.svg</normaloff>:/resources/svg/OpenBridge/close-google.svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
        </property>
        <property name="checkable">
         <bool>false</bool>
