--- a/ui/settings/Main.ui
+++ b/ui/settings/Main.ui
@@ -179,6 +179,20 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
+      <item row="0" column="0">
+        <widget class="QLabel" name="label_virtualkeyboard">
+         <property name="text">
+          <string>Use Virtual Keyboard</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QCheckBox" name="checkBox_virtualkeboard">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
      </layout>
     </widget>
    </item>
