--- a/ui/settings/Main.ui
+++ b/ui/settings/Main.ui
@@ -54,21 +54,68 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="1">
+       <widget class="QCheckBox" name="checkBox_fullscreen">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+
       <item row="1" column="0">
+       <widget class="QLabel" name="label_windowLeft">
+        <property name="text">
+         <string>Window left</string>
+        </property>
+       </widget>
+      </item> 
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="lineEdit_left">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+        </property>
+        <property name="placeholderText">
+         <string>0</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_windowTop">
+        <property name="text">
+         <string>Window top</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="lineEdit_top">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+        </property>
+        <property name="placeholderText">
+         <string>0</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
        <widget class="QLabel" name="label_windowWidth">
         <property name="text">
          <string>Window width</string>
         </property>
        </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_windowHeight">
-        <property name="text">
-         <string>Window height</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
+      </item> 
+      <item row="3" column="1">
        <widget class="QLineEdit" name="lineEdit_width">
         <property name="enabled">
          <bool>false</bool>
@@ -80,18 +127,18 @@
          <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
         </property>
         <property name="placeholderText">
-         <string>1280</string>
+         <string>1024</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QCheckBox" name="checkBox_fullscreen">
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_windowHeight">
         <property name="text">
-         <string/>
+         <string>Window height</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="4" column="1">
        <widget class="QLineEdit" name="lineEdit_height">
         <property name="enabled">
          <bool>false</bool>
@@ -103,7 +150,7 @@
          <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
         </property>
         <property name="placeholderText">
-         <string>720</string>
+         <string>600</string>
         </property>
        </widget>
       </item>
