--- a/ui/mydata/FileViewer.ui
+++ b/ui/mydata/FileViewer.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>fairwindsk::ui::mydata::JsonViewer</class>
- <widget class="QWidget" name="fairwindsk::ui::mydata::JsonViewer">
+ <class>fairwindsk::ui::mydata::FileViewer</class>
+ <widget class="QWidget" name="fairwindsk::ui::mydata::FileViewer">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -63,12 +63,31 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QTreeView" name="treeView_Text"/>
+      <widget class="QWebEngineView" name="webEngineView">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="url">
+        <url>
+         <string>about:blank</string>
+        </url>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QWebEngineView</class>
+   <extends>QWidget</extends>
+   <header location="global">QtWebEngineWidgets/QWebEngineView</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../../resources.qrc"/>
  </resources>
