--- a/ui/mydata/Files.ui
+++ b/ui/mydata/Files.ui
@@ -45,6 +45,23 @@
        <number>0</number>
       </property>
       <item>
+       <widget class="QToolButton" name="toolButton_Home">
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../resources.qrc">
+          <normaloff>:/resources/svg/OpenBridge/home.svg</normaloff>:/resources/svg/OpenBridge/home.svg</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QToolButton" name="toolButton_Back">
         <property name="text">
          <string>...</string>
@@ -69,23 +86,6 @@
         <property name="icon">
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/arrow-up-google.svg</normaloff>:/resources/svg/OpenBridge/arrow-up-google.svg</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>32</width>
-          <height>32</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="toolButton_Home">
-        <property name="text">
-         <string>...</string>
-        </property>
-        <property name="icon">
-         <iconset resource="../../resources.qrc">
-          <normaloff>:/resources/svg/OpenBridge/home.svg</normaloff>:/resources/svg/OpenBridge/home.svg</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -321,6 +321,27 @@
         <property name="icon">
          <iconset resource="../../resources.qrc">
           <normaloff>:/resources/svg/OpenBridge/widget-add-google.svg</normaloff>:/resources/svg/OpenBridge/widget-add-google.svg</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="toolButton_Open">
+        <property name="toolTip">
+         <string/>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../resources.qrc">
+          <normaloff>:/resources/svg/OpenBridge/arrow-right-google.svg</normaloff>
+          <normalon>:/resources/svg/OpenBridge/arrow-right-google.svg</normalon>:/resources/svg/OpenBridge/arrow-right-google.svg</iconset>
         </property>
         <property name="iconSize">
          <size>
