--- a/ui/settings/Main.ui
+++ b/ui/settings/Main.ui
@@ -48,27 +48,19 @@
        <number>0</number>
       </property>
       <item row="0" column="0">
-       <widget class="QLabel" name="label_fullScreen">
+       <widget class="QLabel" name="label_windowMode">
         <property name="text">
-         <string>Use Full Screen</string>
+         <string>Mode</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QCheckBox" name="checkBox_fullscreen">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-
       <item row="1" column="0">
        <widget class="QLabel" name="label_windowLeft">
         <property name="text">
          <string>Window left</string>
         </property>
        </widget>
-      </item> 
+      </item>
       <item row="1" column="1">
        <widget class="QLineEdit" name="lineEdit_left">
         <property name="enabled">
@@ -114,7 +106,7 @@
          <string>Window width</string>
         </property>
        </widget>
-      </item> 
+      </item>
       <item row="3" column="1">
        <widget class="QLineEdit" name="lineEdit_width">
         <property name="enabled">
@@ -154,6 +146,9 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="comboBox_windowMode"/>
+      </item>
      </layout>
     </widget>
    </item>
@@ -192,7 +187,7 @@
            <x>0</x>
            <y>0</y>
            <width>404</width>
-           <height>215</height>
+           <height>121</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_Measures"/>
@@ -227,19 +222,19 @@
        <number>0</number>
       </property>
       <item row="0" column="0">
-        <widget class="QLabel" name="label_virtualkeyboard">
-         <property name="text">
-          <string>Use Virtual Keyboard</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QCheckBox" name="checkBox_virtualkeboard">
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
+       <widget class="QLabel" name="label_virtualkeyboard">
+        <property name="text">
+         <string>Use Virtual Keyboard</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QCheckBox" name="checkBox_virtualkeboard">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
